# OTA_BOOTLOADERS_STM32

BOOTLOADER_F401RET6/: .cproject  .project  BOOTLOADER_F401RET6 Debug.launch  BOOTLOADER_F401RET6.ioc  STM32F401RETX_FLASH.ld
BOOTLOADER_F401RET6/Core/Inc/: bootloader.h
BOOTLOADER_F401RET6/Core/Src/: bootloader.c  main.c  stm32f4xx_hal_msp.c
BOOTLOADER_F401RET6/Debug/: BOOTLOADER_F401RET6.elf  BOOTLOADER_F401RET6.list  BOOTLOADER_F401RET6.map  makefile  objects.list
BOOTLOADER_L073RZT6/: .cproject  .mxproject  .project  BOOTLOADER_L073RZT6 Debug.launch  BOOTLOADER_L073RZT6.ioc  STM32L073RZTX_FLASH.ld
BOOTLOADER_L073RZT6/Core/Inc/: bootloader.h  main.h  stm32l0xx_hal_conf.h
BOOTLOADER_L073RZT6/Core/Src/: bootloader.c  main.c  stm32l0xx_hal_msp.c
BOOTLOADER_L073RZT6/Debug/: BOOTLOADER_L073RZT6.elf  BOOTLOADER_L073RZT6.list  BOOTLOADER_L073RZT6.map  makefile  objects.list
BOOTLOADER_V2_F446RE/: .cproject  .mxproject  BOOTLOADER_V2_F446RE.ioc
BOOTLOADER_V2_F446RE/.metadata/: .log4j2.xml  version.ini
BOOTLOADER_V2_F446RE/Core/Src/: bootloader.c  main.c  stm32f4xx_hal_msp.c
BOOTLOADER_V2_F446RE/Debug/: BOOTLOADER_V2_F446RE.elf  BOOTLOADER_V2_F446RE.list  BOOTLOADER_V2_F446RE.map  objects.list
ESP32_BIN_FLASHER_STM32F4/: CMakeLists.txt
ESP32_BIN_FLASHER_STM32F4/main/inc/: crc32.h  ota_update.h  uart_config.h  update_esp.h  wifi.h
ESP32_BIN_FLASHER_STM32L0/main/: CMakeLists.txt  ota_update.c
ESP32_BIN_FLASHER_STM32L0/main/inc/: flash_cmd.h  http.h  mqtt.h
ESP32_BIN_FLASHER_STM32L0/main/src/: flash_cmd.c  http.c  mqtt.c  uart_config.c  wifi.c
(+57 files in other folders)
